--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <script>
 function opentanuki() {
     var win = window.open();
-    var url = "https://itzjustzj123.github.io/tanuki";
+    var url = "https://zaneap.github.io/tanuki";
     var iframe = win.document.createElement('iframe');
     iframe.style.border = 'none';
     iframe.style.width = '100%';
@@ -52,7 +52,7 @@ function opentanuki() {
 <script>
 function opentag() {
     var win = window.open();
-    var url = "https://itzjustzj123.github.io/tag";
+    var url = "https://zaneap.github.io/tag";
     var iframe = win.document.createElement('iframe');
     iframe.style.border = 'none';
     iframe.style.width = '100%';
@@ -72,7 +72,7 @@ function opentag() {
 <script>
 function opentimes2() {
     var win = window.open();
-    var url = "https://itzjustzj123.github.io/time-shooter-2/";
+    var url = "https://zaneap.github.io/time-shooter-2/";
     var iframe = win.document.createElement('iframe');
     iframe.style.border = 'none';
     iframe.style.width = '100%';
@@ -95,7 +95,7 @@ function opentimes2() {
 <script>
 function opentimes3() {
     var win = window.open();
-    var url = "https://itzjustzj123.github.io/time-shooter-3/";
+    var url = "https://zaneap.github.io/time-shooter-3/";
     var iframe = win.document.createElement('iframe');
     iframe.style.border = 'none';
     iframe.style.width = '100%';
@@ -117,7 +117,7 @@ function opentimes3() {
 <script>
 function opengranny() {
     var win = window.open();
-    var url = "https://itzjustzj123.github.io/granny";
+    var url = "https://zaneap.github.io/granny";
     var iframe = win.document.createElement('iframe');
     iframe.style.border = 'none';
     iframe.style.width = '100%';
