--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ function opengranny() {
 <script>
 function opengranny2() {
     var win = window.open();
-    var url = "https://itzjustzj123.github.io/granny-2";
+    var url = "https://zaneap.github.io/granny-2";
     var iframe = win.document.createElement('iframe');
     iframe.style.border = 'none';
     iframe.style.width = '100%';
@@ -160,7 +160,7 @@ function opengranny2() {
 <script>
 function opendrifthunt() {
     var win = window.open();
-    var url = "https://itzjustzj123.github.io/drift-hunt/";
+    var url = "https://zaneap.github.io/drift-hunt/";
     var iframe = win.document.createElement('iframe');
     iframe.style.border = 'none';
     iframe.style.width = '100%';
@@ -190,7 +190,7 @@ function opendrifthunt() {
 <script>
 function opencarcrash3() {
     var win = window.open();
-    var url = "https://itzjustzj123.github.io/car-crash-3/";
+    var url = "https://zaneap.github.io/car-crash-3/";
     var iframe = win.document.createElement('iframe');
     iframe.style.border = 'none';
     iframe.style.width = '100%';
@@ -210,7 +210,7 @@ function opencarcrash3() {
 <script>
 function openblockblast() {
     var win = window.open();
-    var url = "https://itzjustzj123.github.io/Block-Blast";
+    var url = "https://zaneap.github.io/Block-Blast";
     var iframe = win.document.createElement('iframe');
     iframe.style.border = 'none';
     iframe.style.width = '100%';
@@ -232,7 +232,7 @@ function openblockblast() {
 <script>
 function openduckhunt() {
     var win = window.open();
-    var url = "https://itzjustzj123.github.io/Duck-Hunt";
+    var url = "https://zaneap.github.io/Duck-Hunt";
     var iframe = win.document.createElement('iframe');
     iframe.style.border = 'none';
     iframe.style.width = '100%';
